tests/19-enums-tuple-variant-incomplete.stderr
error[E0308]: mismatched types
 --> $DIR/19-enums-tuple-variant-incomplete.rs:4:19
  |
4 | #[default(value = "A")]
  |                   ^^^
  |                   |
  |                   expected enum `Foo`, found fn item
  |                   expected `Foo` because of return type
5 | enum Foo {
6 |     A(usize),
  |     -------- fn(usize) -> Foo {Foo::A} defined here
  |
  = note: expected enum `Foo`
          found fn item `fn(usize) -> Foo {Foo::A}`
help: use parentheses to instantiate this tuple variant
  |
4 | #[default(value = "A"(_))]
  |                      ^^^
